[package]
name = "cros-libva"
version = "0.0.13"
license = "BSD-3-Clause"
description = "Safe bindings over libva"
repository = "https://github.com/chromeos/cros-libva"
authors = ["The Chromium OS Authors"]
edition = "2021"

readme.workspace = true

[features]
dlopen = []
vendored = []
intel-protected-content-headers = []

[dependencies]
thiserror = "2"
bitflags = "2.5"
log = "0.4"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3.31"
regex = "1.11.1"

[dev-dependencies]
crc32fast = "1.2.1"
